WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166302
Fixed bars are positioned incorrectly when there are header and footer banners
https://bugs.webkit.org/show_bug.cgi?id=166302
Summary
Fixed bars are positioned incorrectly when there are header and footer banners
Simon Fraser (smfr)
Reported
2016-12-20 21:58:18 PST
Fixed bars are positioned incorrectly when there are header and footer banners
Attachments
Patch
(18.68 KB, patch)
2016-12-20 22:02 PST
,
Simon Fraser (smfr)
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(813.20 KB, application/zip)
2016-12-20 23:08 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(13.14 MB, application/zip)
2016-12-20 23:24 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-12-20 22:02:51 PST
Created
attachment 297580
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-12-20 22:03:42 PST
rdar://problem/29727145
Tim Horton
Comment 3
2016-12-20 22:11:48 PST
Comment on
attachment 297580
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297580&action=review
> Source/WebCore/page/FrameView.cpp:1923 > +// On iOS, pageScaleFactor is always one here, and we never have headers and footers.
s/one/1/ reads better, in this case, I think.
Build Bot
Comment 4
2016-12-20 23:08:52 PST
Comment on
attachment 297580
[details]
Patch
Attachment 297580
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2763223
New failing tests: tiled-drawing/scrolling/fixed/four-bars-with-header-and-footer.html
Build Bot
Comment 5
2016-12-20 23:08:56 PST
Created
attachment 297582
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2016-12-20 23:24:18 PST
Comment on
attachment 297580
[details]
Patch
Attachment 297580
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2763234
New failing tests: fast/visual-viewport/zoomed-fixed-header-and-footer.html
Build Bot
Comment 7
2016-12-20 23:24:21 PST
Created
attachment 297583
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 8
2016-12-21 09:36:48 PST
https://trac.webkit.org/changeset/210059
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug