Fixed bars are positioned incorrectly when there are header and footer banners https://bugs.webkit.org/show_bug.cgi?id=166302 rdar://problem/29727145

Reviewed by Tim Horton.

Source/WebCore:

The computation of the visual viewport was wrong in the presence of header and footer
banners. It needs to take into account the fact that "visibleContentRect" applies to the
scroll view contents, which includes header and footer (unscaled), and the potentially scaled
document, and we need to return a rectangle in unscaled document coordinates.

Make a static method in FrameView to do this computation, and call it from FrameView::visualViewportRect()
and ScrollingTreeFrameScrollingNode::layoutViewportForScrollPosition().

layoutViewportForScrollPosition() is only called on Mac, so remove the #ifdeffing related to scaling,
and pass in an unscaled scroll position.

Test: fast/visual-viewport/zoomed-fixed-header-and-footer.html

* page/FrameView.cpp:
(WebCore::FrameView::updateLayoutViewport):
(WebCore::FrameView::maxStableLayoutViewportOrigin):
(WebCore::FrameView::visibleDocumentRect):
(WebCore::FrameView::visualViewportRect):
* page/FrameView.h:
* page/scrolling/ScrollingTreeFrameScrollingNode.cpp:
(WebCore::ScrollingTreeFrameScrollingNode::layoutViewportForScrollPosition):
* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::setScrollPositionWithoutContentEdgeConstraints):

LayoutTests:

* fast/visual-viewport/zoomed-fixed-header-and-footer-expected.txt: Added.
* fast/visual-viewport/zoomed-fixed-header-and-footer.html: Added.
* platform/ios-simulator/fast/visual-viewport/zoomed-fixed-header-and-footer-expected.txt: Added.
* tiled-drawing/scrolling/fixed/four-bars-with-header-and-footer-expected.txt:

Canonical link: https://commits.webkit.org/183677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210059 268f45cc-cd09-0410-ab3c-d52691b4dbfc